--- a/src/components/DisplaySubreddit/DisplaySubredditData.css
+++ b/src/components/DisplaySubreddit/DisplaySubredditData.css
@@ -32,11 +32,12 @@
 }
 
 .sub-log-icon{
-    width: calc(var(--icon-si) + 7.5px);
-    height: calc(var(--icon-size) + 7.5px);
+    width: calc(var(--icon-size) + 30px);
+    height: calc(var(--icon-size) + 30px);
     object-fit: contain;
     padding-left: 5px;
     padding-right: 5px;
+    cursor: pointer;
 }
 
 .sub-not-loaded{
